# waystone-mud

./: .env.example  .gitignore  AGENT.md  BOT.md  COMMANDS.md  CONTRIBUTORS.md  PLAYER_GUIDE.md  PRD_KINGKILLER_MUD.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/config/: alchemy_recipes.yaml  loot_tables.yaml  merchants.yaml  skills.yaml
data/world/: items.yaml
data/world/items/: alchemy.yaml  books.yaml  magic.yaml  starter_items.yaml
data/world/npcs/: enemies.yaml  fae.yaml  merchants.yaml  tarbean.yaml  university.yaml
data/world/rooms/: fae.yaml  imre.yaml  tarbean.yaml  university.yaml
docs/: PRD-COMBAT-ROUNDS.md
plans/: npc-display-plan.md
scripts/: test_world_loading.py
src/data/: waystone.db
src/waystone/: __init__.py  __main__.py  config.py  main.py
src/waystone/agent/: __init__.py  __main__.py  agent.py  client.py  parser.py
src/waystone/database/: __init__.py  engine.py
src/waystone/database/models/: __init__.py  base.py  character.py  item.py  npc.py  quest.py  room.py  (+1 more)
src/waystone/game/: __init__.py  engine.py
src/waystone/network/: __init__.py  connection.py  protocol.py  session.py  telnet_server.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_full_flow.py
tests/test_agent/: __init__.py  test_agent.py  test_client.py  test_parser.py
tests/test_database/: test_models.py
tests/test_game/: __init__.py  conftest.py  test_attributes.py  test_combat.py  test_commands.py  test_experience.py  test_inventory.py  test_leveling.py  test_npc.py  test_npc_display.py  test_phase2_features.py  test_skills.py
tests/test_network/: __init__.py  test_session.py
tests/test_systems/: __init__.py  conftest.py  test_combat.py  test_combat_skills.py  test_death.py  test_economy.py  test_loot.py  test_merchant.py  test_sympathy.py  test_trading.py  test_unified_combat.py  test_university.py
(+48 files in other folders)
